# ai_example_2

./: .gitignore  .gitmodules  CMakeLists.txt  build.ps1  format.sh
ai_example/: CMakeLists.txt  as_double_vector.cpp  as_double_vector.hpp  closest_to_one.cpp  closest_to_one.hpp  collect_images.cpp  collect_images.hpp  dimension_constants.hpp  extract_grayscale_images.cpp  extract_grayscale_images.hpp  extract_image.cpp  extract_image.hpp  extract_labels.cpp  extract_labels.hpp  file.cpp  file.hpp  file_paths.cpp  file_paths.hpp  gui_constants.cpp  gui_constants.hpp  idx_file.cpp  idx_file.hpp  image_count.cpp  image_count.hpp  image_size_from.cpp  image_size_from.hpp  integer_interval_as_string_vector.cpp  integer_interval_as_string_vector.hpp  invert_grayscale_image.cpp  invert_grayscale_image.hpp  io_constants.hpp  main.cpp  neural_network.cpp  neural_network.hpp  neural_network_constants.hpp  point.hpp  size.hpp  table.cpp  table.hpp  throw_with_source_info.hpp
